2009-11-11  Francois Suter  <francois@typo3.org>

	* Cleanup #12552: Scheduler: Code cleanup: Corrected inconsistent use of full stops in language labels

2009-11-11  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12557: Wrong file references and colors in t3skin-extjs theme, missing icon in recycler

2009-11-10  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #12115: htmlArea RTE "Create link" button doesn't become clickable when using keyboard to select text in Safari/Chrome

2009-11-10  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #12487: Inform if page use content_from_pid

2009-11-09  Benjamin Mack  <benni@typo3.org>

	* Fixed bug #12345: TCA feature _VALIGN for wizards is broken (Thanks to Tolleiv Nietsch)

2009-11-09  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to #11847: htmlArea RTE displays empty editing area in Opera 10
	* Fixed bug #12534: htmlArea RTE: list creation looses text in Safari

2009-11-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10128: JavaScript error upon login

2009-11-08  Oliver Hader  <oliver@typo3.org>

	* Release of TYPO3 4.3.0beta3

2009-11-08  Francois Suter  <francois@typo3.org>

	* Fixed bug #12019: Added missing style definition to Install Tool CSS file
	* Fixed bug #12423: Reports: Services overview does not provide extension key
	* Fixed bug #12482: Extension manager does not search in extension titles when in "import extension" section (thanks to Steffen Müller)

2009-11-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #12487: Inform if page use content_from_pid
	* Fixed bug #12247: absRefPrefix is prefixed with external js files

2009-11-08  Oliver Hader  <oliver@typo3.org>

	* Raised feeditadvanced from 0.1.1 to 0.8.0
	* Fixed bug #12324: Page tree will not be shown in the TYPO3 backend
	* Follow-up to bugfix #12324: Renamed sanitizeBackEndUrl() to sanitizeLocalUrl() in t3lib_div

2009-11-08  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid versions from 0.9.16 to 0.9.17
