@@ -1,3 +1,7 @@
+2009-11-11  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #12566: htmlArea RTE: Selecting element from status bar does not work in Safari
+
 2009-11-11  Francois Suter  <francois@typo3.org>
 
 	* Cleanup #12552: Scheduler: Code cleanup: Corrected inconsistent use of full stops in language labels
